bugfix: Attempted fix for smooth scroll on firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,8 @@ body {
     padding: 0;
 }
 
-html {
+html,
+body {
     scroll-behavior: smooth;
 }
 
